Fixed countdown and side-menu z-index

--- a/bouquet/src/components/countdown.scss
+++ b/bouquet/src/components/countdown.scss
@@ -7,7 +7,7 @@
 }
 
 .countdownAll {
-    z-index: 10;
+    z-index: 2;
     position: relative;
 }
 
